--- a/_layouts/home.liquid
+++ b/_layouts/home.liquid
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>{{ site.title }}</title>
   </head>
   <body>
     <h1>{{ site.title }}</h1>
