--- a/_includes/nav.liquid
+++ b/_includes/nav.liquid
@@ -1,5 +1,5 @@
 <div class="nav fixed">
-  <a class="nav-logo" href="/"><img class="nav-logo nav-logo-img" src="./assets/images/irf-logo.svg" alt="IRF Home"/></a>
+  <a class="nav-logo" href="/"><img class="nav-logo nav-logo-img" src="/assets/images/irf-logo.svg" alt="IRF Home"/></a>
   <div class="nav-list">
     <a class="nav-item" data-target=".line-up">Line-up</a>
     <a class="nav-item" data-target=".mission">Mission</a>
@@ -13,7 +13,7 @@
 </div>
 
 <div class="nav fixed collapsed">
-  <a class="nav-logo" href="/"><img class="nav-logo" src="./assets/images/irf-logo.svg" alt="IRF Home"/></a>
+  <a class="nav-logo" href="/"><img class="nav-logo" src="/assets/images/irf-logo.svg" alt="IRF Home"/></a>
 
   <a class="nav-item mobile-cta" data-target=".tickets-section">Get tickets</a>
 
