--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1221,10 +1221,11 @@ header {
     color: #FFFFFF; }
   .bio p {
     text-align: center;
-    width: 90%;
-    max-width: 50rem;
     font-size: 1.2rem;
-    color: #FFFFFF; }
+    color: #FFFFFF;
+    width: 90%;
+    max-width: 35rem;
+    margin: .1618rem; }
   .bio h2 {
     margin: 5rem 0 1rem;
     text-align: center; }
@@ -1247,6 +1248,10 @@ header {
     margin: 0 auto 5rem;
     text-align: center;
     padding: 0; }
+  .bio li p {
+    margin: .1618rem;
+    width: 100%;
+    max-width: none; }
 
 footer {
   width: 100%;
