--- a/assets/styles/main.sass
+++ b/assets/styles/main.sass
@@ -937,10 +937,11 @@ header
     color: $white
   p
     text-align: center
-    width: 90%
-    max-width: 50rem
     font-size: 1.2rem
     color: $white
+    width: 90%
+    max-width: 35rem
+    margin: .1618rem
   h2
     margin: 5rem 0 1rem
     text-align: center
@@ -955,7 +956,11 @@ header
     margin: 0 auto 5rem
     text-align: center
     padding: 0
-
+  li
+    p
+      margin: .1618rem
+      width: 100%
+      max-width: none
 footer
   width: 100%
   height: 4rem
