--- a/_includes/artist-slider.liquid
+++ b/_includes/artist-slider.liquid
@@ -1,5 +1,6 @@
 <header class="slider">
-  {% for artist in site.artists %}
+  {% assign sorted_artists = site.artists | sort:"position" %}
+  {% for artist in sorted_artists %}
     <div class="header-slider-item">
       <img src="{{ artist.info.image }}" alt="{{ artist.info.name }}">
     </div>
