--- a/_layouts/home.liquid
+++ b/_layouts/home.liquid
@@ -9,150 +9,10 @@
 
       {% include nav.liquid %}
 
-      {% include artist-slider.liquid %}
-
-      {% include lineup-section.liquid %}
-
-      <section class="mission">
-        <img class="mission-logo" src="./assets/images/irf-logo-full.svg" alt="">
-        <h1 class="mission-header">Our Mission</h1>
-        <p>Ithaca Reggae Fest is dedicated to the protection of Cayuga Lake through a vibrant celebration of Ithaca’s legendary reggae community and its history. With support from over 3,500 festival attendees and all of our sponsors in 2017, the Friends of Cayuga Lake made a $7,500 donation to support the purchase of a new boat for the Cayuga Lake Floating Classroom, which is now Discover Cayuga Lake. They’re fostering future stewards of Cayuga Lake by providing hands-on learning opportunities in the interest of sustaining our Finger Lakes waterways for future generations. #Reggae4Cayuga </p>
-        <div class="bg">
-          <img class="bg-cloud-01" src="./assets/images/cloud-01.svg" alt="">
-          <img class="bg-cloud-02" src="./assets/images/cloud-02.svg" alt="">
-          <img class="bg-tree-01" src="./assets/images/tree.svg" alt="">
-          <img class="bg-tree-02" src="./assets/images/tree.svg" alt="">
-          <img class="bg-grass" src="./assets/images/grass.svg" alt="">
-        </div>
-      </section>
-      <section class="schedule">
-        <h1>Schedule</h1>
-
-        <p class="table-header">Event dates, pre-parties, after-parties, venue locations, etc.</p>
-        <table>
-           <tr>
-             <td>Festival Kick Off Party @ <a href="http://thehaunt.com/" target="_blank" rel="noreferrer noopener">The Haunt</a></td>
-             <td>June 22</td>
-           </tr>
-           <tr>
-             <td>(702 Willow Ave, Ithaca, NY 14850)</td>
-           </tr>
-           <tr>
-             <td>Doors: 6pm, Show: 7pm</td>
-           </tr>
-           <td>7:00pm: DJ ha-MEEN</td>
-           <tr>
-           </tr>
-           <td>7:30pm: The Analogue Sons</td>
-           <tr>
-           </tr>
-           <td>8:30pm: DJ ha-MEEN</td>
-           <tr>
-           </tr>
-           <td>9:00pm: Root Shock</td>
-           <tr>
-           </tr>
-           <td>10:30pm: DJ ha-MEEN</td>
-           <tr>
-           </tr>
-           <td>11:00pm: Big Mean Dub Machine </td>
-           <tr>
-           </tr>
-        </table>
-
-        <table>
-           <tr>
-             <td>Celebration @ <a href="https://maps.google.com/?q=1+James+L+Gibbs+Dr,+Ithaca,+NY+14850&entry=gmail&source=g" target="_blank" rel="noopener noreferrer">Stewart Park</a></td>
-             <td>June 23</td>
-           </tr>
-           <tr>
-             <td>(1 James L Gibbs Dr, Ithaca, NY 14850)</td>
-           </tr>
-           <td>Gate: 10:30am, Show: 11am</td>
-           <tr>
-           </tr>
-           <td>11:00am: Cayuga Nation Cultural Presentation w/ singing, dancing, & speakers (Cayuga Stage)</td>
-           <tr>
-           </tr>
-           <td>12:00pm: Thousands of One (Main Stage)</td>
-           <tr>
-           </tr>
-           <td>12:50pm: Rebel Fire (Education Village)</td>
-           <tr>
-           </tr>
-           <td>1:20pm: Crucial Reggae Social Club (Main Stage)</td>
-           <tr>
-           </tr>
-           <td>2:00pm: DJ Kamau Preston (Leslie Puryear Stage)</td>
-           <tr>
-           </tr>
-           <td>2:30pm: Mosaic Foundation (Main Stage)</td>
-           <tr>
-           </tr>
-           <td>3:20pm: Sandra Steingarber (Leslie Puryear Stage)</td>
-           <tr>
-           </tr>
-           <td>3:50pm: Double Tiger (Main Stage)</td>
-           <tr>
-           </tr>
-           <td>4:50pm: Mother Makeda & Mike Judah (Leslie Puryear Stage)</td>
-           <tr>
-           </tr>
-           <td>5:20pm: The Meditations (Main Stage)</td>
-           <tr>
-           </tr>
-           <td>6:25pm: DJ Kamau Preston (Leslie Puryear Stage)</td>
-           <tr>
-           </tr>
-           <td>6:55pm: Sister Carol (Main Stage)</td>
-           <tr>
-           </tr>
-           <td>8:00pm: DJ Kamau Preston (Leslie Puryear Stage)</td>
-           <tr>
-           </tr>
-           <td>8:30pm: Clinton Fearon & Boogie Brown Band (Main Stage)</td>
-           <tr>
-           </tr>
-           <tr>
-             <td>Emcees: Mother Makeda & Mike Judah (all day)</td>
-           </tr>
-        </table>
-
-        <table>
-           <tr>
-             <td>After Party @ <a href="http://thehaunt.com/" target="_blank" rel="noreferrer noopener">The Haunt</a></td>
-             <td>June 23</td>
-           </tr>
-           <tr>
-             <td>(702 Willow Ave, Ithaca, NY 14850)</td>
-           </tr>
-           <tr>
-             <td>Doors: 10pm, Show: 11pm</td>
-           </tr>
-           <td>11:00pm: Double Tiger Sound System (w/s/g Singers)</td>
-           <tr>
-           </tr>
-        </table>
-
-        <table>
-           <tr>
-             <td>Acoustic Afternoon @ <a href="https://www.ithacabeer.com/" target="_blank" rel="noreferrer noopener">Ithaca Beer Co.</a></td>
-             <td>June 24</td>
-           </tr>
-           <tr>
-             <td>(122 Ithaca Beer Dr, Ithaca, NY 14850)</td>
-           </tr>
-           <tr>
-             <td>Doors: 1pm, Show: 2:00pm</td>
-           </tr>
-           <td>2:00pm Kevin Kinsella</td>
-           <tr>
-           </tr>
-           <td>3:00pm Clinton Fearon </td>
-           <tr>
-           </tr>
-        </table>
-      </section>
+      {% assign sorted_sections = site.sections | sort:"position" %}
+      {% for section in sorted_sections %}
+        {% include {{ section.info.file }} %}
+      {% endfor %}
 
       <section class="information">
         <h1>Information</h1>
