--- a/assets/styles/main.sass
+++ b/assets/styles/main.sass
@@ -676,6 +676,9 @@ header
     width: 90%
     max-width: 50rem
     text-align: center
+  li
+    p
+      text-align: left
   .guidelines
     width: 90%
     max-width: 60rem
@@ -859,50 +862,12 @@ header
 
 .sponsor
   width: 18rem
-  height: 8rem
+  height: 10rem
   margin: 2rem 1rem
   background-size: contain
   background-position: center
   background-repeat: no-repeat
-  &.the-haunt
-    width: 90vw
-    max-width: 30rem
-    background-image: url("../images/sponsors/Haunt IRF Logo_1.jpg")
-  &.marriott
-    background-image: url("../images/sponsors/marriott.jpg")
-  &.esb
-    background-image: url("../images/sponsors/esb.jpg")
-  &.ithaca-beer
-    background-image: url("../images/sponsors/ithaca-beer.png")
-  &.green-scene
-    background-image: url("../images/sponsors/green-scene.jpg")
-  &.csp
-    background-image: url("../images/sponsors/csp.svg")
-  &.mighty-yoga
-    background-image: url("../images/sponsors/mighty-yoga.jpg")
-  &.renovus
-    background-image: url("../images/sponsors/renovus.png")
-  &.greenstar
-    background-image: url("../images/sponsors/GreenStar Logo.png")
-  &.flsm
-    background-image: url("../images/sponsors/flsm.png")
-  &.casita-del-paloris
-    background-image: url("../images/sponsors/Casita del paloris.jpg")
-    height: 10rem
-  &.grassroots
-    background-image: url("../images/sponsors/grassroots.jpg")
-    height: 18rem
-  &.viva
-    background-image: url("../images/sponsors/viva.svg")
-  &.child-development-council
-    background-image: url("../images/sponsors/child-development-council.jpg")
-    height: 18rem
-  &.limebike
-    background-image: url("../images/sponsors/LimeBike_logo.png")
-    height: 10rem
-  &.guayaki
-    background-image: url("../images/sponsors/guayaki.svg")
-    height: 11rem
+  overflow: hidden
 
 .sponsor-grid
   width: 100vw
