--- a/_includes/nav.liquid
+++ b/_includes/nav.liquid
@@ -1,12 +1,13 @@
 <div class="nav fixed">
   <a class="nav-logo" href="/"><img class="nav-logo nav-logo-img" src="/assets/images/irf-logo.svg" alt="IRF Home"/></a>
   <div class="nav-list">
-    <a class="nav-item" data-target=".line-up">Line-up</a>
-    <a class="nav-item" data-target=".mission">Mission</a>
-    <a class="nav-item" data-target=".schedule">Schedule</a>
-    <a class="nav-item" data-target=".information">Information</a>
-    <a class="nav-item" data-target=".media">Media</a>
-    <a class="nav-item" data-target=".sponsors">Sponsors</a>
+    {% assign sorted_sections = site.sections | sort:"position" %}
+    {% for section in sorted_sections %}
+      {% if section.info.hide-in-nav != true and section.info.hidden != true %}
+        <a class="nav-item" data-target=".{{ section.title | downcase | split: " " | join: "-"}}">{{ section.title | downcase | split: " " | join: "-"}}</a>
+      {% endif %}
+    {% endfor %}
+
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSfr3HQ8W_-m1w5Ud7XhoW0AGHQcI8mezITv1luARJWoS7CCSw/viewform" target="_blank" rel="noopener noreferrer" class="nav-item">Volunteer</a>
   </div>
   <a class="header-get-tickets get-tickets" id="ticketBtn">Get Tickets</a>
@@ -25,12 +26,12 @@
   </label>
   <div class="hamburger-menu">
     <div class="nav-items">
-      <a class="nav-item" data-target=".line-up">Line-up</a>
-      <a class="nav-item" data-target=".mission">Mission</a>
-      <a class="nav-item" data-target=".schedule">Schedule</a>
-      <a class="nav-item" data-target=".information">Information</a>
-      <a class="nav-item" data-target=".media">Media</a>
-      <a class="nav-item" data-target=".sponsors">Sponsors</a>
+      {% assign sorted_sections = site.sections | sort:"position" %}
+      {% for section in sorted_sections %}
+        {% if section.info.hide-in-nav != true %}
+          <a class="nav-item" data-target=".{{ section.title | downcase | split: " " | join: "-"}}">{{ section.title | downcase | split: " " | join: "-"}}</a>
+        {% endif %}
+      {% endfor %}
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSfr3HQ8W_-m1w5Ud7XhoW0AGHQcI8mezITv1luARJWoS7CCSw/viewform" target="_blank" rel="noopener noreferrer" class="nav-item">Volunteer</a>
     </div>
   </div>
