Removed uncompressed images

--- a/_layouts/home.liquid
+++ b/_layouts/home.liquid
@@ -15,30 +15,7 @@
           {% include {{ section.info.file }} %}
         {% endif %}
       {% endfor %}
-
-      <section class="media">
-        <h1>Media</h1>
-        <p></p>
-        <p></p>
-
-        <h2>Ithaca Reggae Fest Playlist</h2>
-        <iframe src="https://open.spotify.com/embed/user/85sesd9ls75zm0mzm9dncx3rt/playlist/3HFTMNsgvLf9T6IqEvgXy4" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-
-        <h2>2017 Media</h2>
-        <p>Rootfire: <a href="https://rootfire.net/generation-consciousness-at-ithaca-reggae-fest/" target="_blank" rel="noreferrer noopener">Generation Consciousness at Ithaca Reggae Fest</a></p>
-        <p>Live For Live Music: <a href="https://liveforlivemusic.com/news/first-annual-ithaca-reggae-fest/" target="_blank" rel="noreferrer noopener">Ithaca Reggae Fest To Tap John Brown’s Body And More...</a></p>
-        <p>Ithaca Journal: <a href="https://www.ithacajournal.com/story/entertainment/2017/06/20/ithaca-reggae-fest-debut-stewart-park/103045030/" target="_blank" rel="noreferrer noopener">Ithaca Reggae Fest to debut at Stewart Park</a></p>
-        <p>Rootfire: <a href="https://rootfire.net/past-future-ithaca-reggae-festival-ticket-giveaway/" target="_blank" rel="noreferrer noopener">Past Future - Ithaca Reggae Fest</a></p>
-
-        <h2>2018 Media</h2>
-        <p>(coming soon)</p>
-
-        <h2>2017 Recap Video</h2>
-        <video src="./assets/videos/irf_2017.mov" controls></video>
-        <h2>Photo Gallery</h2>
-
-        <div class="gallery"></div>
-      </section>
+      
       <section class="sponsors">
         <h1>Sponsors</h1>
 
@@ -199,7 +176,7 @@
 
               var numberOfimages = 27;
               var images = [];
-              var imagePath = './assets/images/image_gallery/'
+              var imagePath = '/uploads/image_gallery/'
               var imageType = '.jpg';
 
               for (var i = 1; i <= numberOfimages; i++) {
