--- a/assets/styles/main.sass
+++ b/assets/styles/main.sass
@@ -22,6 +22,10 @@ h2
   width: 100vw
   height: 100vh
   position: fixed
+  top: 0
+  right: 0
+  bottom: 0
+  left: 0
   background-color: $white
   z-index: 99999999999999999999999999999
   display: flex
@@ -29,7 +33,7 @@ h2
   align-items: center
   flex-direction: column
   text-align: center
-  animation: fadeOut 3s 3.68s $standard forwards
+  animation: fadeOut 3s 1.68s $standard forwards
 .splash-title
   display: flex
   position: relative
