--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -83,6 +83,10 @@ h2 {
   width: 100vw;
   height: 100vh;
   position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   background-color: #FFFFFF;
   z-index: 99999999999999999999999999999;
   display: -webkit-box;
@@ -99,8 +103,8 @@ h2 {
   -ms-flex-direction: column;
   flex-direction: column;
   text-align: center;
-  -webkit-animation: fadeOut 3s 3.68s cubic-bezier(0.4, 0, 0.2, 1) forwards;
-  animation: fadeOut 3s 3.68s cubic-bezier(0.4, 0, 0.2, 1) forwards; }
+  -webkit-animation: fadeOut 3s 1.68s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+  animation: fadeOut 3s 1.68s cubic-bezier(0.4, 0, 0.2, 1) forwards; }
 
 .splash-title {
   display: -webkit-box;
