--- a/assets/styles/main.sass
+++ b/assets/styles/main.sass
@@ -863,23 +863,22 @@ header
     color: $yellow
   h2
     margin: 5rem 0 0
-
-.sponsor
-  width: 18rem
-  height: 10rem
-  margin: 2rem 1rem
-  background-size: contain
-  background-position: center
-  background-repeat: no-repeat
-  overflow: hidden
-
-.sponsor-grid
-  width: 100vw
-  max-width: 60rem
+  img
+    max-width: 30rem
+.grid
+  width: 90vw
+  max-width: 40rem
   display: flex
-  justify-content: center
   flex-wrap: wrap
-
+  justify-content: center
+  p
+    width: 8rem
+    height: 12rem
+    margin: 1rem
+  img
+    width: 100%
+    height: 100%
+    object-fit: contain
 .artist-page
   .bg
     position: fixed
