--- a/assets/styles/main.sass
+++ b/assets/styles/main.sass
@@ -671,6 +671,10 @@ header
   padding: 5rem 0 0
   background-color: $white
   color: $black
+  z-index: 1
+  position: relative
+  img
+    max-width: 30rem
   h1
     color: $yellow
     width: 100%
@@ -814,6 +818,7 @@ header
     max-width: 50rem
     height: 40rem
     img
+      max-width: none
       width: 100%
       height: 100%
       object-fit: cover
