--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -896,7 +896,11 @@ header {
   align-items: center;
   padding: 5rem 0 0;
   background-color: #FFFFFF;
-  color: #000000; }
+  color: #000000;
+  z-index: 1;
+  position: relative; }
+  .information img {
+    max-width: 30rem; }
   .information h1 {
     color: #FFBE0B;
     width: 100%;
@@ -1054,6 +1058,7 @@ header {
     max-width: 50rem;
     height: 40rem; }
     .media .gallery img {
+      max-width: none;
       width: 100%;
       height: 100%;
       -o-object-fit: cover;
