--- a/_layouts/artist.liquid
+++ b/_layouts/artist.liquid
@@ -4,7 +4,7 @@
 
   <body class="artist-page">
 
-    {% include nav.liquid %}
+    {% include nav-no-items.liquid %}
 
     <div class="bio">
       <img class="artist-image" src="{{ page.info.image }}" alt="{{ page.info.name }}">
