--- a/assets/styles/main.sass
+++ b/assets/styles/main.sass
@@ -434,6 +434,7 @@ header
   width: 100%
   max-width: 100rem
   margin: 0 auto
+  padding-bottom: 10rem
   display: grid
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr))
   grid-gap: 5rem
@@ -561,7 +562,7 @@ header
   height: 100%
   justify-content: center
   align-items: center
-  padding: 15rem 0 10rem
+  padding: 5rem 0
   z-index: 0
   .mission-logo
     width: 15rem
