--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -572,6 +572,7 @@ header {
   width: 100%;
   max-width: 100rem;
   margin: 0 auto;
+  padding-bottom: 10rem;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   grid-gap: 5rem;
@@ -743,7 +744,7 @@ header {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  padding: 15rem 0 10rem;
+  padding: 5rem 0;
   z-index: 0; }
   .mission .mission-logo {
     width: 15rem;
