--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1160,6 +1160,8 @@ header {
     height: 100%;
     -o-object-fit: contain;
     object-fit: contain; }
+  .grid.grid-collapse p {
+    min-width: 128px; }
 
 .artist-page .bg {
   position: fixed;
