--- a/assets/styles/main.sass
+++ b/assets/styles/main.sass
@@ -885,6 +885,9 @@ header
     width: 100%
     height: 100%
     object-fit: contain
+  &.grid-collapse
+    p
+      min-width: 128px
 .artist-page
   .bg
     position: fixed
