--- a/assets/styles/main.sass
+++ b/assets/styles/main.sass
@@ -562,7 +562,7 @@ header
   height: 100%
   justify-content: center
   align-items: center
-  padding: 5rem 0
+  padding: 5vw 0
   z-index: 0
   .mission-logo
     width: 15rem
