--- a/_includes/nav.liquid
+++ b/_includes/nav.liquid
@@ -3,7 +3,7 @@
   <div class="nav-list">
     {% assign sorted_sections = site.sections | sort:"position" %}
     {% for section in sorted_sections %}
-      {% if section.info.hide-in-nav != true and section.hidden != true %}
+      {% if section.info.hide-in-nav != true and section.published != false %}
         <a class="nav-item" data-target=".{{ section.title | downcase | split: " " | join: "-"}}">{{ section.title | downcase | split: " " | join: "-"}}</a>
       {% endif %}
     {% endfor %}
@@ -12,7 +12,7 @@
   </div>
 
   {% for section in site.sections %}
-    {% if section.hidden != true and section.info.is-ticket-section == true %}
+    {% if section.published != false and section.info.is-ticket-section == true %}
       <a class="header-get-tickets get-tickets" id="ticketBtn">Get Tickets</a>
     {% endif %}
   {% endfor %}
@@ -22,7 +22,7 @@
   <a class="nav-logo" href="/"><img class="nav-logo" src="/assets/images/irf-logo.svg" alt="IRF Home"/></a>
 
   {% for section in site.sections %}
-    {% if section.hidden != true and section.info.is-ticket-section == true %}
+    {% if section.published != false and section.info.is-ticket-section == true %}
       <a class="nav-item mobile-cta" data-target=".tickets-section">Get tickets</a>
     {% endif %}
   {% endfor %}
