--- a/assets/styles/main.sass
+++ b/assets/styles/main.sass
@@ -367,10 +367,10 @@ header
   display: flex
   flex-direction: column
   align-items: center
-  background: #003660 /* Old browsers */
-  background: -moz-linear-gradient(top, $dark-blue 0%, #62C7CC 100%) /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, $dark-blue 0%,#62C7CC 100%) /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, $dark-blue 0%,#62C7CC 100%) /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  background: #003660
+  background: -moz-linear-gradient(top, $dark-blue 0%, #62C7CC 100%)
+  background: -webkit-linear-gradient(top, $dark-blue 0%,#62C7CC 100%)
+  background: linear-gradient(to bottom, $dark-blue 0%,#62C7CC 100%)
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$dark-blue', endColorstr='$blue',GradientType=0 )
   h1
     padding: 5rem 0
@@ -836,6 +836,7 @@ header
   .social-content
     h2
       margin: 0 0 2rem 0
+      text-align: center
     .social-icons
       display: flex
       width: 100%
