--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -332,10 +332,10 @@ a {
   color: #FF0046;
 }
 
-header {
+.slider {
   width: 100vw;
-  height: calc((100vw / (16/9)) - 4.5rem);
-  max-height: calc(100vh - 4.5rem);
+  height: calc((100vw / (16/9)));
+  max-height: calc(100vh);
   position: relative;
   background-size: cover;
   background-position: center;
@@ -343,7 +343,13 @@ header {
   overflow-y: hidden;
   z-index: 0;
 }
-header div {
+@media (min-width: 74rem) {
+  .slider {
+    height: calc((100vw / (16/9)) - 4.5rem);
+    max-height: calc(100vh - 4.5rem);
+  }
+}
+.slider div {
   height: 100%;
 }
 
