Added social media meta tags

--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -4,6 +4,10 @@
   <link rel="stylesheet" href="/assets/styles/default-skin/default-skin.css">
   <link rel="stylesheet" href="/assets/styles/main.css">
   <meta name="viewport" content="width=device-width">
+  <meta property="og:title" content="Ithaca Reggae Fest">
+  <meta property="og:image" content="http://ithacareggaefest.com/uploads/irf-social.png">
+  <meta property="og:url" content="http://ithacareggaefest.com/">
+  <meta name="twitter:card" content="summary_large_image">
   <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
   <![endif]-->
