--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -1,3 +1,3 @@
 <footer>
-  <p><a href="http://epeery.com" target="_blank" rel="noopener noreferrer">Website created by Elijah Peery</a></p>
+  <p><a href="https://github.com/epeery" target="_blank" rel="noopener noreferrer">Website created by Elijah Peery</a></p>
 </footer>
