Updated volunteer link

--- a/_includes/nav.liquid
+++ b/_includes/nav.liquid
@@ -8,7 +8,7 @@
       {% endif %}
     {% endfor %}
 
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfr3HQ8W_-m1w5Ud7XhoW0AGHQcI8mezITv1luARJWoS7CCSw/viewform" target="_blank" rel="noopener noreferrer" class="nav-item">Volunteer</a>
+    <a href="https://forms.gle/NcHibAdA594JiHHm6" target="_blank" rel="noopener noreferrer" class="nav-item">Volunteer</a>
   </div>
 
   {% for section in site.sections %}
@@ -41,7 +41,7 @@
           <a class="nav-item" data-target=".{{ section.title | downcase | split: " " | join: "-"}}">{{ section.title | downcase | split: " " | join: "-"}}</a>
         {% endif %}
       {% endfor %}
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfr3HQ8W_-m1w5Ud7XhoW0AGHQcI8mezITv1luARJWoS7CCSw/viewform" target="_blank" rel="noopener noreferrer" class="nav-item">Volunteer</a>
+      <a href="https://forms.gle/NcHibAdA594JiHHm6" target="_blank" rel="noopener noreferrer" class="nav-item">Volunteer</a>
     </div>
   </div>
 </div>
